# erpy

./: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.js  justfile  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
erpy-ai/: Cargo.toml
erpy-ai/src/: lib.rs  llama.rs  mistral.rs  open_ai.rs
erpy-sync-server/: Cargo.toml
erpy-sync-server/migrations/: 20241020130015_init_db.sql
erpy-sync-server/src/: database.rs  main.rs
erpy-types/: Cargo.toml
erpy-types/src/: lib.rs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 1_init.sql
src-tauri/src/: character.rs  chat.rs  config.rs  lib.rs  main.rs  tts.rs
src/lib/: automerge.ts  database.ts  helpers.ts  log.ts  notifications.ts  remark.ts  state-link.svelte.ts  storage.ts  subscriptions.svelte.ts  sync-state.svelte.ts  tts.ts  types.ts
src/lib/__tests__/: database.test.ts
src/lib/components/: ConnectionIndicator.svelte  ExternalLink.svelte  Modal.svelte  ResizingTextArea.svelte  TopMenu.svelte
src/lib/service/: characters.ts  mnemonic.ts  setup.ts  sync.ts
src/lib/storage/: evolu.ts  index.ts  mnemonic.ts  sqlite.ts  storage.ts
src/lib/wavplayer/: README.md  concat.ts  index.ts  wavify.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/(app)/: +layout.ts  +page.svelte  +page.ts
src/routes/(app)/archive/: +page.svelte
src/routes/(app)/character/[characterId]/chat/: +page.ts
src/routes/(app)/character/[characterId]/chat/[chatId]/: +page.svelte  +page.ts
src/routes/(app)/models/: +page.svelte  +page.ts
src/routes/(app)/models/mistral/: +page.svelte  +page.ts
src/routes/(app)/models/openai/: +page.svelte
src/routes/(app)/settings/: +page.svelte
src/routes/archive/: +page.svelte  +page.ts
src/routes/character/[characterId]/chat/: +page.ts
src/routes/character/[characterId]/chat/[chatId]/: +page.svelte  +page.ts
src/routes/first-time-setup/: +layout.svelte  +page.svelte  +page.ts
src/routes/models/: +page.svelte  +page.ts
src/routes/models/mistral/: +page.svelte
src/routes/models/openai/: +page.svelte
src/routes/settings/: +page.svelte
