[package]
name = "erpy-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
camino = { version = "1.1.9", features = ["serde1"] }
dirs = "5.0.1"
either = "1.13.0"
erpy-types = { path = "../erpy-types" }
hf-hub = { version = "0.3.2", optional = true, features = ["tokio"] }
indexmap = "2.6.0"
log = "0.4.22"
regex = "1.11.1"
reqwest = { version = "0.12.8", features = ["json"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["sync"] }
tokio-stream = "0.1.16"
walkdir = "2.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs", rev = "09d2e2596d9b0aa728749cf5614e40dd1a112b3b", features = [
    "metal",
], optional = true }
llama-cpp-2 = { version = "0.1", optional = true, features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs", rev = "09d2e2596d9b0aa728749cf5614e40dd1a112b3b", features = [
    "cuda",
    "cudnn",
], optional = true }
llama-cpp-2 = { version = "0.1", optional = true, features = ["cuda"] }

[features]
default = []
llama = ["llama-cpp-2", "hf-hub"]
mistral = ["mistralrs"]
