[package]
name = "erpy-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
camino = { version = "1.1.10", features = ["serde1"] }
dirs = "5.0.1"
either = "1.15.0"
erpy-types = { path = "../erpy-types" }
hf-hub = { version = "0.3.2", optional = true, features = ["tokio"] }
indexmap = "2.9.0"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["json"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["sync"] }
tokio-stream = "0.1.17"
uuid = { version = "1.17.0", features = ["v4"] }
walkdir = "2.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs", features = [
    "metal",
], optional = true }
llama-cpp-2 = { version = "0.1", optional = true, features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs", features = [
    "cuda",
    "cudnn",
], optional = true }
llama-cpp-2 = { version = "0.1", optional = true, features = ["cuda"] }
cudarc = { version = "=0.12.1", optional = true }

[features]
default = []
llama = ["llama-cpp-2", "hf-hub"]
mistral = ["mistralrs", "cudarc"]
