[package]
name = "erpy-sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
axum = { version = "0.7.7", features = ["macros"] }
dotenvy = "0.15.7"
erpy-types = { path = "../erpy-types" }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring", "postgres", "json", "uuid", "time" ] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde"] }
